--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>용성 &amp; 하나</h1>
+						<!-- <h1>용성 &amp; 하나</h1>
 						<p>4월 29일 토요일, 오후 12시</p>
-						<p>라마다서울호텔</p>
+						<p>라마다서울호텔</p> -->
+						<img src="images/info/main.jpg" alt="" />
 					</header>
 
 				<!-- Thumbnail -->
@@ -58,7 +59,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>J.E.Lee</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>, modified</li>
+							<li>J.E.Lee</li>
 						</ul>
 					</footer>
 
