--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<!-- <h1>용성 &amp; 하나</h1>
 						<p>4월 29일 토요일, 오후 12시</p>
 						<p>라마다서울호텔</p> -->
-						<img src="images/info/main.jpg" alt="" />
+						<img src="images/info/main.jpg" alt="" style="display: block; width: 100%;"/>
 					</header>
 
 				<!-- Thumbnail -->
