--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<img src="images/info/directions.jpg" alt="" style="display: block; width: 100%;"/>
 						<ul class="copyright">
 							<li>J.E.Lee</li>
 						</ul>
