--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<footer id="footer">
 						<img src="images/info/directions.jpg" alt="" style="display: block; width: 100%;"/>
 						<ul class="copyright">
-							<li>J.E.Lee</li>
+							<li>j.e.lee</li>
 						</ul>
 					</footer>
 
