--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
 						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
+						</article>
 					</section>
 
 				<!-- Footer -->
